<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_3"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/repo_search_header_height"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="@dimen/spacing_mlarge"
            app:expandedTitleMarginEnd="@dimen/repo_search_margin_end"
            app:expandedTitleMarginStart="@dimen/spacing_large"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/github_background"
                app:layout_collapseMode="parallax" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:orientation="vertical"
                android:padding="@dimen/spacing_mlarge"
                app:layout_collapseMode="parallax">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repoSearchHeaderTitle"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/repoSearchHeaderSubTitle"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/white" />

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/spacing_large"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="@dimen/spacing_xxlarge"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:tint="@color/grey_60"
                        android:src="@drawable/ic_search" />

                    <EditText
                        android:id="@+id/etSearchRepository"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/repoSearchBarHint"
                        android:imeOptions="actionSearch"
                        android:maxLines="1"
                        android:singleLine="true">
                        <requestFocus />
                    </EditText>

                    <View
                        android:layout_width="@dimen/spacing_large"
                        android:layout_height="0dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRepos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/rlEmptyLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bg_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/repo_search_bg_height"
                android:layout_alignParentBottom="true"
                android:src="@mipmap/bg_no_item" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/spacing_xxlarge"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:lineSpacingExtra="@dimen/spacing_middle"
                    android:text="@string/repoSearchNoResult"
                    android:gravity="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_60" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llProgressLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/spacing_medium"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:text="@string/repoSearchProgressTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_80" />

            <ProgressBar
                android:id="@+id/progress_indeterminate"
                android:indeterminateTint="@color/blue_500"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLazyLoadProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@color/grey_5"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:indeterminateTint="@color/blue_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabRecyclerScroolTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            app:rippleColor="@android:color/white"
            android:tint="@android:color/white"
            android:src="@drawable/ic_up"
            android:layout_alignParentEnd="true"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>