<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_detail_header_height"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:titleEnabled="false">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetStartWithNavigation="0dp"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/user_detail_nested_margin_top"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:fillViewport="true"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llContentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/ivUserImage"
                    android:layout_width="@dimen/spacing_xxxxlarge"
                    android:layout_height="@dimen/spacing_xxxxlarge"
                    android:layout_margin="@dimen/spacing_xsmall"
                    android:src="@drawable/ic_person"
                    app:civ_border="true"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="@dimen/spacing_xsmall"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="0" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mary Jackson"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        app:fontFamily="sans-serif-medium" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="@dimen/spacing_large"
                            android:layout_marginEnd="@dimen/spacing_medium"
                            android:layout_marginRight="@dimen/spacing_medium"
                            android:tint="@color/grey_5"
                            android:src="@drawable/ic_mail" />

                        <TextView
                            android:id="@+id/tvUserMail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="gm@gm.com"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_5" />
                    </LinearLayout>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@android:color/white"
                    app:cardCornerRadius="@dimen/spacing_xsmall"
                    app:cardElevation="@dimen/spacing_xsmall"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/spacing_large"
                        android:paddingTop="@dimen/spacing_large">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvUserFollowers"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="249"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/grey_90"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacing_small"
                                    android:text="@string/userDetailFollowersTitle"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                    android:textColor="@color/grey_40" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvFollowing"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="130"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/grey_90"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacing_small"
                                    android:text="@string/userDetailFollowingTitle"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                    android:textColor="@color/grey_40" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvUserRepos"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="125"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/grey_90"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/spacing_small"
                                    android:text="@string/userDetailReposTitle"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                    android:textColor="@color/grey_40" />

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@android:color/white"
                    app:cardCornerRadius="@dimen/spacing_xsmall"
                    app:cardElevation="@dimen/spacing_xsmall"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_large">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/userDetailUserRepositorysTitle"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/grey_90" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvUserRepos"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                        <LinearLayout
                            android:id="@+id/llLazyLoadProgress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/grey_5"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <ProgressBar
                                android:id="@+id/progress_bar"
                                style="@style/Widget.AppCompat.ProgressBar"
                                android:indeterminateTint="@color/blue_500"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:indeterminate="true" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_large" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llProgressLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/spacing_medium"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:text="@string/userDetailProgressTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_80" />

                <ProgressBar
                    android:id="@+id/progress_indeterminate"
                    android:indeterminateTint="@color/blue_500"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>